--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Otoniel Guajardo - Javascript Developer</title>
+        <title>Otoniel Guajardo</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="styles/normalize.css?ver=1" />
         <link rel="stylesheet" href="styles/index.css?ver=1" />
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
