--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <body>
         <div id="page">
             <section id="hero">
-                <img src="img/picture.png" :alt="data.name" />
+                <img src="img/picture.png" :alt="data.name"/>
             </section>
             <section id="albums">
                 <div class="album" v-for="album in data.albums">
-                    <img :src="album.cover" :alt="album.name">
+                    <img :src="album.cover" :alt="`${data.name} - ${album.name}`">
                     <ul>
                         <li v-for="link in album.links">
-                            <a :href="link.url" target="_blank">
+                            <a :href="link.url" target="_blank" :title="link.name">
                                 <img :src="`img/${link.id}.png`" :alt="link.name">
                             </a>
                         </li>
